--- a/Extensions/Content/Dnn.PersonaBar.Extensions/admin/personaBar/Dnn.Roles/App_LocalResources/Roles.fa-IR.resx
+++ b/Extensions/Content/Dnn.PersonaBar.Extensions/admin/personaBar/Dnn.Roles/App_LocalResources/Roles.fa-IR.resx
@@ -129,9 +129,6 @@
   <data name="SearchPlaceHolder.Text" xml:space="preserve">
     <value>جستجوی نقش امنیتی با کلمات کلیدی</value>
   </data>
-  <data name="Actions.Header" xml:space="preserve">
-    <value />
-  </data>
   <data name="AllGroups.Text" xml:space="preserve">
     <value>[تمام گروه ها]</value>
   </data>
@@ -787,5 +784,8 @@
   </data>
   <data name="RoleUpdated.SystemRoleError" xml:space="preserve">
     <value>نقش امنیتی سیستمی قابل ویرایش نمی باشد.</value>
+  </data>
+  <data name="Prompt_RoleFound.Text" xml:space="preserve">
+    <value>نقش ' {0} ' پیدا شده است.</value>
   </data>
 </root>
