--- a/Extensions/Content/Dnn.PersonaBar.Extensions/admin/personaBar/Dnn.Security/App_LocalResources/Security.fa-IR.resx
+++ b/Extensions/Content/Dnn.PersonaBar.Extensions/admin/personaBar/Dnn.Security/App_LocalResources/Security.fa-IR.resx
@@ -798,9 +798,6 @@
   <data name="LastName.Header" xml:space="preserve">
     <value>نام خانوادگی</value>
   </data>
-  <data name="ScannerExplanation.Text" xml:space="preserve">
-    <value />
-  </data>
   <data name="Username.Header" xml:space="preserve">
     <value>نام‌کاربری</value>
   </data>
@@ -962,12 +959,6 @@
   </data>
   <data name="TabSettings.Text" xml:space="preserve">
     <value>تنظیمات تب</value>
-  </data>
-  <data name="ModifiedSettingsExplaination.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="ModifiedFilesExplaination.Text" xml:space="preserve">
-    <value />
   </data>
   <data name="ModifiedFilesLoadWarning.Text" xml:space="preserve">
     <value>Tool will enumerate all files in your system to show the recently changed files. It may take a while on a site with lots of files.</value>
@@ -1157,5 +1148,11 @@
   </data>
   <data name="Check.Text" xml:space="preserve">
     <value>[ چک کنید ]</value>
+  </data>
+  <data name="plForceLogOutAfterPasswordChanged.Text" xml:space="preserve">
+    <value>خروج اجباری پس از تغییر رمز عبور</value>
+  </data>
+  <data name="plForceLogOutAfterPasswordChanged.Help" xml:space="preserve">
+    <value>پس از تغییر رمز عبور در سایر مرورگر کاربر خروج اجباری می شود.</value>
   </data>
 </root>
