--- a/Extensions/Content/Dnn.PersonaBar.Extensions/admin/personaBar/Dnn.SiteSettings/App_LocalResources/SiteSettings.fa-IR.resx
+++ b/Extensions/Content/Dnn.PersonaBar.Extensions/admin/personaBar/Dnn.SiteSettings/App_LocalResources/SiteSettings.fa-IR.resx
@@ -157,7 +157,7 @@
     <value>نادیده گرفتن کلمات</value>
   </data>
   <data name="TabCrawling.Text" xml:space="preserve">
-    <value>Crawling</value>
+    <value>خزنده</value>
   </data>
   <data name="TabFileExtensions.Text" xml:space="preserve">
     <value>پسوند فایل</value>
@@ -533,7 +533,7 @@
     <value>برای ان فیلد یک نام وارد کنید!</value>
   </data>
   <data name="PropertyDefinitionDeletedWarning.Text" xml:space="preserve">
-    <value>Are you sure you want to delete this profile field?</value>
+    <value>آیا مطمئن هستید که می خواهید این قسمت نمایه را حذف کنید؟</value>
   </data>
   <data name="DeleteSuccess.Text" xml:space="preserve">
     <value>فیلد پروفایل با موفقیت حذف شد.</value>
@@ -749,40 +749,40 @@
     <value>مترادف‌ها</value>
   </data>
   <data name="SynonymsGroup.Header" xml:space="preserve">
-    <value>Synonyms Group</value>
+    <value>گروه مترادف</value>
   </data>
   <data name="SynonymsGroupUpdateSuccess.Text" xml:space="preserve">
-    <value>The synonyms group has been updated.</value>
+    <value>گروه مترادف به روز شده است.</value>
   </data>
   <data name="SynonymsGroupCreateSuccess.Text" xml:space="preserve">
-    <value>The synonyms group has been added.</value>
+    <value>گروه مترادف ها اضافه شده است.</value>
   </data>
   <data name="SynonymsGroupDeletedWarning.Text" xml:space="preserve">
-    <value>Are you sure you want to delete this synonyms group?</value>
+    <value>آیا مطمئن هستید که می خواهید این گروه مترادف را حذف کنید؟</value>
   </data>
   <data name="SynonymsGroupDeleteSuccess.Text" xml:space="preserve">
-    <value>The synonyms group has been deleted.</value>
+    <value>گروه مترادف حذف شده است.</value>
   </data>
   <data name="SynonymsGroupDeleteError.Text" xml:space="preserve">
-    <value>Could not delete the synonyms group. Please try later.</value>
+    <value>گروه مترادف حذف نشد. لطفا بعدا تلاش کنید.</value>
   </data>
   <data name="IgnoreWords.Text" xml:space="preserve">
     <value>نادیده گرفتن کلمات</value>
   </data>
   <data name="IgnoreWordsUpdateSuccess.Text" xml:space="preserve">
-    <value>The ignore words has been updated.</value>
+    <value>کلمات نادیده گرفته شده به روز شده است.</value>
   </data>
   <data name="IgnoreWordsCreateSuccess.Text" xml:space="preserve">
-    <value>The ignore words has been added.</value>
+    <value>کلمات نادیده گرفته شده اضافه شده است.</value>
   </data>
   <data name="IgnoreWordsDeletedWarning.Text" xml:space="preserve">
-    <value>Are you sure you want to delete the ignore words?</value>
+    <value>آیا مطمئن هستید که می خواهید کلمات نادیده گرفته شده را حذف کنید؟</value>
   </data>
   <data name="IgnoreWordsDeleteSuccess.Text" xml:space="preserve">
-    <value>The ignore words has been deleted.</value>
+    <value>کلمات نادیده گرفته شده حذف شده است.</value>
   </data>
   <data name="IgnoreWordsDeleteError.Text" xml:space="preserve">
-    <value>Could not delete the ignore words. Please try later.</value>
+    <value>کلمات نادیده گرفته شده حذف نشد، لطفا مجدد تلاش کنید.</value>
   </data>
   <data name="HtmlEditor.Text" xml:space="preserve">
     <value>مدیریت ویرایشگر HTML</value>
@@ -887,7 +887,7 @@
     <value>ایجاد بسته زبان</value>
   </data>
   <data name="ResourceFileVerifier.Text" xml:space="preserve">
-    <value>Resource File Verifier</value>
+    <value>تأییدکننده پرونده منابع</value>
   </data>
   <data name="VerifyLanguageResources.Text" xml:space="preserve">
     <value>بررسی زبان فایل های منبع</value>
@@ -914,10 +914,10 @@
     <value>فایل های ریسورس ناقص :&amp;nbsp;</value>
   </data>
   <data name="LanguagePackCreateSuccess.Text" xml:space="preserve">
-    <value>The Language Pack(s) were created and can be found in the {0}/Install/Language folder.</value>
+    <value>بسته های زبان ایجاد شده و در پوشه {0}/Install/Language یافت می شود.</value>
   </data>
   <data name="LanguagePackCreateFailure.Text" xml:space="preserve">
-    <value>You must create resource files before you can create a language pack.</value>
+    <value>قبل از ایجاد یک بسته زبان ، باید پرونده های منابع ایجاد کنید.</value>
   </data>
   <data name="lbLocale.Text" xml:space="preserve">
     <value>زبان ریسورس:</value>
@@ -971,7 +971,7 @@
     <value>عمومی</value>
   </data>
   <data name="HighlightPendingTranslations.Text" xml:space="preserve">
-    <value>Highlight Pending Translations</value>
+    <value>برجسته کردن در انتظار ترجمه</value>
   </data>
   <data name="LanguageEditor.Header" xml:space="preserve">
     <value>ترجمه ریسورس فایل ها</value>
@@ -980,10 +980,10 @@
     <value>Localized Value</value>
   </data>
   <data name="ResourceFile.Text" xml:space="preserve">
-    <value>Resource File</value>
+    <value>فایل منبع</value>
   </data>
   <data name="ResourceFolder.Text" xml:space="preserve">
-    <value>Resource Folder</value>
+    <value>پوشه منبع</value>
   </data>
   <data name="ResourceName.Text" xml:space="preserve">
     <value>نام ریسورس :</value>
@@ -1013,7 +1013,7 @@
     <value>منابع عمومی</value>
   </data>
   <data name="LocalResources.Text" xml:space="preserve">
-    <value>Local Resources</value>
+    <value>منابع محلی</value>
   </data>
   <data name="SiteTemplates.Text" xml:space="preserve">
     <value>قالب سایت</value>
@@ -1034,7 +1034,7 @@
     <value>فایل {0} ذخیره شد.</value>
   </data>
   <data name="ResourceUpdated.Text" xml:space="preserve">
-    <value>Resource file has been updated.</value>
+    <value>فایل منابع به روز شده است.</value>
   </data>
   <data name="InvalidLocale.ErrorMessage" xml:space="preserve">
     <value>این زبان در حال حاضر پشتیبانی نمی وشد ({0}).</value>
@@ -1066,14 +1066,11 @@
   <data name="EnableLocalizedContent.Text" xml:space="preserve">
     <value>فعال کردن محتوای بومی</value>
   </data>
-  <data name="EnableLocalizedContentHelpText.Text" xml:space="preserve">
-    <value />
-  </data>
   <data name="EnableLocalizedContentClickCancel.Text" xml:space="preserve">
     <value>Click Cancel now if you want to change the current site default.</value>
   </data>
   <data name="TranslationProgressBarText.Text" xml:space="preserve">
-    <value>[number] new pages are beign created for each language. Please wait as you localized pages are generated...</value>
+    <value>[number] صفحه جدید برای هر زبان ایجاد می شود. لطفاً صبر کنید تا صفحات بومی سازی شده ایجاد شوند ...</value>
   </data>
   <data name="TotalProgress.Text" xml:space="preserve">
     <value>کل پردازش ها [number]%</value>
@@ -1142,7 +1139,7 @@
     <value>عدم انتشار همه صفحات</value>
   </data>
   <data name="PagesToTranslate.Text" xml:space="preserve">
-    <value>Pages To Translate:</value>
+    <value>صفحات برای ترجمه:</value>
   </data>
   <data name="plImprovementProgram.Help" xml:space="preserve">
     <value>این برنامه به ما درک بهتری از چگونگی بهبود دی ان ان می دهد . تمام داده به صورت ناشناس و فقط برای استفاده داخلی برای شرکت رسمی دی ان ان جمع آوری خواهد شد تا با تحلیل و انالیز به بهبود روند این نرم افزار کمک بشود</value>
@@ -1172,7 +1169,7 @@
     <value>.به روز رسانی انجام شد</value>
   </data>
   <data name="SaveOrCancelWarning.Text" xml:space="preserve">
-    <value>You have unsaved changes. Please save or cancel your changes first.</value>
+    <value>تغییرات شما ذخیره نشده است،لطفا ابتدا تغییرات خود را ذخیره یا لغو کنید.</value>
   </data>
   <data name="DeactivateLanguageWarning.Text" xml:space="preserve">
     <value>غیر فعال شود {0}?</value>
@@ -1190,7 +1187,7 @@
     <value>حالت</value>
   </data>
   <data name="PagesSuccessfullyLocalized.Text" xml:space="preserve">
-    <value>Pages successfully localized.</value>
+    <value>صفحات با موفقیت بومی سازی شدند.</value>
   </data>
   <data name="PublishedAllTranslatedPages.Text" xml:space="preserve">
     <value>صفحه با موفقیت انتشار یافت.</value>
@@ -1199,7 +1196,7 @@
     <value>-- انتخاب کنید --</value>
   </data>
   <data name="PagesSuccessfullyTranslated.Text" xml:space="preserve">
-    <value>Pages successfully translated.</value>
+    <value>صفحات با موفقیت ترجمه شدند.</value>
   </data>
   <data name="DisableLanguageWarning.Text" xml:space="preserve">
     <value>آیا مطمئن هستید برای غیر فعال سازی این زبان {0}</value>
@@ -1210,11 +1207,11 @@
   <data name="lblCustomAnalyzer.Text1" xml:space="preserve">
     <value>نوع تحلیل‌گر سفارشی:</value>
   </data>
-  <data name="SearchIndex.Text1" xml:space="preserve">
-    <value>تنظیمات جستجو</value>
+  <data name="NoSpecialCharacterName.Text" xml:space="preserve">
+    <value>این ویژگی کاراکترهای خاصی را نمی پذیرد.</value>
   </data>
-  <data name="RequiredTextBox.Text1" xml:space="preserve">
-    <value>درصورتی که فیلد Tectbox می باشد، طول آن می بایست از 0 بزرگتر باشد</value>
+  <data name="ProfilePropertyDefinition_PropertyName.NoSpecialCharacters" xml:space="preserve">
+    <value>نام فیلد کاراکترهای خاص یا فضایی را نمی پذیرد.</value>
   </data>
   <data name="LanguageSelectionLabel.Text" xml:space="preserve">
     <value>زبان</value>
@@ -1326,5 +1323,74 @@
   </data>
   <data name="Host.Text" xml:space="preserve">
     <value>هاست</value>
+  </data>
+  <data name="UnPublishedAllTranslatedPages.Text" xml:space="preserve">
+    <value>صفحات با موفقیت منتشر نشده اند.</value>
+  </data>
+  <data name="SiteSelectionLabel.Text" xml:space="preserve">
+    <value>EDITING SITE</value>
+  </data>
+  <data name="plTermsTabId.Help" xml:space="preserve">
+    <value>صفحه ای که شرایط استفاده برای این سایت را نشان می دهید. اگر در سمت چپ انتخاب شده باشد ، وقتی کاربر بر روی شرایط استفاده کلیک کند ، متن پیش فرض نشان داده می شود.</value>
+  </data>
+  <data name="plTermsTabId.Text" xml:space="preserve">
+    <value>صفحه شرایط استفاده</value>
+  </data>
+  <data name="plPrivacyTabId.Help" xml:space="preserve">
+    <value>این صفحه ای است که کاربر شما هنگام کلیک روی پیوند بیانیه حریم خصوصی به آن هدایت می شود. اگر تنظیم نشده باشد ، یک بیانیه پیش فرض حریم خصوصی نشان داده می شود.</value>
+  </data>
+  <data name="plPrivacyTabId.Text" xml:space="preserve">
+    <value>صفحه بیانیه حریم خصوصی</value>
+  </data>
+  <data name="plShowCookieConsent.Help" xml:space="preserve">
+    <value>نمایش پنجره رضایت کوکی در این سایت. کاربران برای موافقت و بستن آن باید بر روی پنجره کلیک کنند. بعد از این دوباره ظاهر نمی شود</value>
+  </data>
+  <data name="plShowCookieConsent.Text" xml:space="preserve">
+    <value>رضایت کوکی را نشان دهید</value>
+  </data>
+  <data name="TabPrivacy.Text" xml:space="preserve">
+    <value>حریم خصوصی</value>
+  </data>
+  <data name="PrivacyCommunicationSettings.Text" xml:space="preserve">
+    <value>تنظیمات ارتباطی</value>
+  </data>
+  <data name="PrivacyCookieConsentSettings.Text" xml:space="preserve">
+    <value>تنظیمات رضایت کوکی</value>
+  </data>
+  <data name="plDisplayCopyright.Text" xml:space="preserve">
+    <value>نمایش حق چاپ</value>
+  </data>
+  <data name="Reset.Text" xml:space="preserve">
+    <value>تنظیم مجدد</value>
+  </data>
+  <data name="Warning.Text" xml:space="preserve">
+    <value>اخطار</value>
+  </data>
+  <data name="Weeks.Text" xml:space="preserve">
+    <value>هفته ها</value>
+  </data>
+  <data name="Off.Text" xml:space="preserve">
+    <value>خاموش</value>
+  </data>
+  <data name="DataConsentUserDeleteAction.Text" xml:space="preserve">
+    <value>اقدام به حذف کاربر</value>
+  </data>
+  <data name="DataConsentUserHardDelete.Text" xml:space="preserve">
+    <value>Hard Delete</value>
+  </data>
+  <data name="GdprResetTerms.Completed" xml:space="preserve">
+    <value>Consent for terms and conditions have been reset</value>
+  </data>
+  <data name="GdprResetTerms.Confirm" xml:space="preserve">
+    <value>Do you wish to reset all users consent and force everyone to consent to the terms and conditions again?</value>
+  </data>
+  <data name="Days.Text" xml:space="preserve">
+    <value>روزها</value>
+  </data>
+  <data name="Hours.Text" xml:space="preserve">
+    <value>ساعت</value>
+  </data>
+  <data name="DataConsentUserDeleteManual.Text" xml:space="preserve">
+    <value>دستی</value>
   </data>
 </root>
