--- a/Extensions/Content/Dnn.PersonaBar.Extensions/admin/personaBar/Dnn.SiteSettings/App_LocalResources/SiteSettings.resx
+++ b/Extensions/Content/Dnn.PersonaBar.Extensions/admin/personaBar/Dnn.SiteSettings/App_LocalResources/SiteSettings.resx
@@ -1440,4 +1440,7 @@
   <data name="DataConsentResetTerms.Confirm" xml:space="preserve">
     <value>Do you wish to reset the consent all users signed and ask them again?</value>
   </data>
+  <data name="lblCustomAnalyzer.Text1" xml:space="preserve">
+    <value />
+  </data>
 </root>
