--- a/Extensions/Content/Dnn.PersonaBar.Extensions/admin/personaBar/Dnn.Sites/App_LocalResources/Sites.fa-IR.resx
+++ b/Extensions/Content/Dnn.PersonaBar.Extensions/admin/personaBar/Dnn.Sites/App_LocalResources/Sites.fa-IR.resx
@@ -328,7 +328,7 @@
     <value>والد</value>
   </data>
   <data name="HomeDirectory.Label" xml:space="preserve">
-    <value>Home Directory</value>
+    <value>فهرست اصلی</value>
   </data>
   <data name="SiteTemplate.Label" xml:space="preserve">
     <value>قالب سایت</value>
@@ -429,5 +429,11 @@
   </data>
   <data name="Sites.Text" xml:space="preserve">
     <value>سایت ها</value>
+  </data>
+  <data name="CreatePortalHomeFolderExists.Error" xml:space="preserve">
+    <value>پوشه پرتال {0} از قبل استفاده شده است.</value>
+  </data>
+  <data name="Description.Text" xml:space="preserve">
+    <value>توضیحات</value>
   </data>
 </root>
